# mam-audiofinder-transmission

./: .env.test.example  .gitignore  AGENTS.md  Cargo.toml  DEV_NOTES.md  Dockerfile  README.md  docker-compose.yml  env.example  go.mod  main.go  main_test.go  mam_live_test.go
.github/workflows/: docker-publish.yml  live-mam-test.yml
app/: main.py
app/static/: app.js  common.css  common.js  setup.js
app/templates/: base.html  index.html  setup.html
src/: app_state.rs  import.rs  main.rs  routes.rs  transmission.rs
